--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <meta name="description" content="Comprehensive domestic animal loan management system for livestock financing with role-based access control." />
+    <meta name="keywords" content="livestock loans, animal loans, domestic loan management, cattle loans, goat loans, farm loans" />
+    <title>Domestic Loan Management System</title>
   </head>
   <body>
     <div id="root"></div>
